WorkShop/CloudStack/Kubernetes/IngressController/Ingress-employee-producer-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: employee-producer-pod
  namespace: ingress
  labels: 
    app: employee-producer-label
    type: employee-data-service
spec:
  containers:
    - name: employee-producer-pod
      image: aksbyexampleacr.azurecr.us/employee-producer:1.0-amd64
      ports:
      - containerPort: 8000
