WorkShop/CloudStack/Kubernetes/IngressController/Ingress-service-employee-cert.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-cert-pod 
  namespace: ingress 
spec:
  type: NodePort
  ports:
  - port: 9000
  selector:
    app: employee-cert-label
