WorkShop/CloudStack/Kubernetes/IngressController/Ingress-service-employee-producer.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-employee-producer-pod
  namespace: ingress
spec:
  type: NodePort
  ports:
  - port: 8000
  selector:
    app: employee-producer-label
