WorkShop/CloudStack/Kubernetes/IngressController/horizon-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: horizon-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /horizon-one(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: aks-horizon-one
            port:
              number: 80
      - path: /horizon-two(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: aks-horizon-two
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: aks-horizon-one
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: horizon-ingress-static
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path:
        pathType: Prefix
        backend:
          service:
            name: aks-horizon-one
            port: 
              number: 80
        path: /static(/|$)(.*)
